# kmd-camera

./: pyproject.toml
src/kmd/camera/: __init__.py  camera.py
